--- a/style.css
+++ b/style.css
@@ -1,1 +1,21 @@
-/* navigation starts here */
+.flex-container {
+    display: flex;
+    flex-wrap: nowrap;
+    background-color: clear;
+  }
+
+  .flex-container > div {
+    background-color: clear;
+    width: 100px;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+  }
+  
+  .box1 {
+    background-image: url("../img/image1.webp");
+  }
+
+   /* position: absolute;
+    left: 50px; */
