--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
 
 
 .row6{
+    color:white;
     background-image: url(https://www.spacex.com/static/images/backgrounds-2021/hls-resized-2.webp);
     height: 100vh;
     background-size:cover;
