--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   }
 .svg {
   height:3rem;
-  color: white;
+  fill: white;
 }
   .header {
     background: transparent;
@@ -41,6 +41,10 @@ body {
     left: 25%;
   }
 
+  nav {
+    width: 100%;
+  }
+
 li {
     list-style-type: none;
     float: left;
@@ -50,19 +54,59 @@ li {
   }
 ul {
   height: 5rem;
+  width: 100%;
   display: flex;
   align-items: center;
   position: relative;
   top: 0.5rem;
 }
 
-#hamburger {
-  display: block;
-  top: 50%;
-  right: 50px;
-  width: 10px;
-  height: 1px;
+.H {
+  width: 5px;
+  height: 5px;
+  background-color: white;
+  margin: 5px 5;
 }
+
+.button {
+  background-color: transparent;
+  color: white;
+  height: 65px;
+  width: 200px;
+  font-weight: bolder;
+  position: relative;
+  padding: 0 15px;
+  margin: 30px 0 0;
+  border: solid 5px #ffff;
+}
+
+.button:hover {
+  /* transform: scale(2);
+  transition: transform .2s;
+  box-shadow: 4px 4px 12px black; */
+  background-color: white;
+  color:rgba(0, 0, 0, 0);
+  height: 65px;
+  width: 200px;
+  font-weight: bolder;
+  position: relative;
+  padding: 0 15px;
+  margin: 30px 0 0;
+  border: solid 5px #ffff;
+}
+/* .HAMBURGER  {
+  height: 20px;
+  width: 20px;
+  background-position: center;
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-color: aquamarine;
+} */
+
+.SHOP {
+  margin-left: 1100px;
+}
+
 
 .inner-left-bottom {
   text-align: left;
@@ -76,6 +120,7 @@ ul {
   background-size:cover;
   background-repeat: no-repeat;
   background-position: center top;
+  color: white;
 }
    
 .row3{
@@ -93,6 +138,7 @@ ul {
  position: relative;
  top: 50%;
  left: 20%;
+ color:#ffff;
 }
 
 .row4{
