--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,11 @@ ul {
 .button:hover {
   /* transform: scale(2);
   transition: transform .2s;
-  box-shadow: 4px 4px 12px black; */
-  background-color: white;
-  color:rgba(0, 0, 0, 0);
+  box-shadow: 4px 4px 12px black;
+  background-color: white; */
+  -webkit-transition: color 1s cubic-bezier(.25,1,.25,1),background-color 1s cubic-bezier(.25,1,.25,1);
+  transition: color 1s cubic-bezier(.25,1,.25,1),background-color 1s cubic-bezier(.25,1,.25,1);
+  color: black;
   height: 65px;
   width: 200px;
   font-weight: bolder;
@@ -114,13 +116,40 @@ ul {
   color: black;
 }
 
-.text-container {
+/* .text-container-1{
   display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  position: relative;
  left: 20%;
+} */
+
+.text-container {
+  display: flex;
+ flex-direction: column;
+ align-items: flex-start;
+ justify-content: flex-start;
+ position: relative;
+ top: 50%;
+ left: 20%;
+ color:#ffff;
+}
+ 
+
+.text-container h2 {
+  font: 26px D-DIN-Medium,Arial,Verdana,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1px;
+}
+
+.text-container h1 {
+    font: 46px/50px D-DIN-Bold,Arial,Verdana,sans-serif;
+    line-height: 1px;
+    font-weight: 600;
+    font-style: normal;
+    text-transform: uppercase;
 }
 
 .row2{
@@ -140,9 +169,10 @@ ul {
   background-size:cover;
   background-repeat: no-repeat;
   background-position: center top;
+  color: white;
 }
 
-.text-container {
+/* .text-container {
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
@@ -150,7 +180,7 @@ ul {
  top: 50%;
  left: 20%;
  color:#ffff;
-}
+} */
 
 .row4{
   display: flex;
