--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
   padding: 0;
 }
 
+html {
+  height: 100vh;
+}
+
 .flex-container {
     display: flex;
     flex-wrap: nowrap;
@@ -61,12 +65,12 @@ ul {
   top: 0.5rem;
 }
 
-.H {
+/* .H {
   width: 5px;
   height: 5px;
   background-color: white;
   margin: 5px 5;
-}
+} */
 
 .button {
   background-color: transparent;
@@ -96,14 +100,6 @@ ul {
   margin: 30px 0 0;
   border: solid 5px #ffff;
 }
-/* .HAMBURGER  {
-  height: 20px;
-  width: 20px;
-  background-position: center;
-  background-size: 20px;
-  background-repeat: no-repeat;
-  background-color: aquamarine;
-} */
 
 .SHOP {
   margin-left: 1100px;
@@ -130,9 +126,11 @@ ul {
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
- position: relative;
+ position:relative;
  top: 50%;
  left: 20%;
+ max-height: 200px;
+ max-width: 1000px;
  color:#ffff;
 }
  
@@ -171,16 +169,6 @@ ul {
   background-position: center top;
   color: white;
 }
-
-/* .text-container {
- flex-direction: column;
- align-items: flex-start;
- justify-content: flex-start;
- position: relative;
- top: 50%;
- left: 20%;
- color:#ffff;
-} */
 
 .row4{
   display: flex;
